<resources>
    <string name="app_name">RubberDuck</string>
    <string name="sign_in">sign in</string>
    <string name="codeforces_handle">codeforces handle</string>
    <string name="handle">Handle</string>
    <string name="rank">rank</string>
    <string name="code">Code</string>
    <string name="rating">Rating</string>
    <string name="verdicts">Verdicts</string>
    <string name="categories">Categories</string>
    <string name="problem_name">Problem name</string>
    <string name="problem_content">Problem content</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="start_coding">Start Coding!</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="end">End</string>
    <string name="ask_exit">Are you sure you want to end this session?</string>
    <string name="ans_no">No</string>
    <string name="ans_yes">Yes</string>
    <string name="category">Category</string>
    <string name="count">Count</string>
    <string name="contest_rank">Rank</string>
    <string name="new_rating">New Rating</string>
    <string name="contest">Contest</string>
    <string name="time">Time</string>
    <string name="verdict">Verdict</string>
    <string name="id">ID</string>
    <string name="memory">Memory</string>
    <string name="code_pond">Code pond</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">email address</string>
    <string name="password_reset">password reset</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
