<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/LightBlue">

    <ImageView
        android:id="@+id/titlePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars"
        android:background="@drawable/profile_pic_bg"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/handleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anaheim"
        android:gravity="center_horizontal"
        android:text="@string/handle"
        android:textSize="32sp"
        android:textColor="@color/font_color"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/rankView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="28sp"
        android:fontFamily="@font/anaheim"
        android:textColor="@color/font_color"
        android:gravity="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/handle_view"
        android:stretchColumns="*"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/codeBtn"
                android:background="@drawable/gen_btn"
                android:text="@string/code"
                android:fontFamily="@font/anaheim"
                android:textColor="@color/font_color"
                android:textSize="22sp"
                tools:ignore="ButtonStyle"
                android:onClick="startCodeActivity"
                android:layout_margin="30dp"
                android:paddingVertical="30dp"/>

            <Button
                android:id="@+id/ratingBtn"
                android:background="@drawable/gen_btn"
                android:text="@string/rating"
                android:fontFamily="@font/anaheim"
                android:textColor="@color/font_color"
                android:textSize="22sp"
                android:onClick="startRatingActivity"
                tools:ignore="ButtonStyle"
                android:layout_margin="30dp"
                android:paddingVertical="30dp"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/verdictsBtn"
                android:background="@drawable/gen_btn"
                android:text="@string/verdicts"
                android:fontFamily="@font/anaheim"
                android:textColor="@color/font_color"
                android:textSize="22sp"
                android:onClick="startSubmissionActivity"
                tools:ignore="ButtonStyle"
                android:layout_margin="30dp"
                android:paddingVertical="30dp"/>

            <Button
                android:id="@+id/strengthsBtn"
                android:background="@drawable/gen_btn"
                android:text="@string/categories"
                android:fontFamily="@font/anaheim"
                android:textColor="@color/font_color"
                android:textSize="22sp"
                android:onClick="startCategoriesActivity"
                tools:ignore="ButtonStyle"
                android:layout_margin="30dp"
                android:paddingVertical="30dp"/>

        </TableRow>


    </TableLayout>

</LinearLayout>