<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SignupFragment"
    android:background="@drawable/handle_view"
    android:paddingVertical="20dp">

    <EditText
        android:id="@+id/handleText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anaheim"
        android:hint="codeforces handle"
        android:inputType="textPersonName"
        android:textColor="@color/font_color"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anaheim"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/font_color"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/handleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anaheim"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/font_color"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/gen_btn"
        android:fontFamily="@font/anaheim"
        android:text="@string/sign_up"
        android:textColor="#051633"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintVertical_bias="0.339" />

</androidx.constraintlayout.widget.ConstraintLayout>