<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="#99d9ea">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/anaheim"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#051633"
        android:paddingHorizontal="30dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="319dp"
        android:layout_height="196dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/handle_view"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.578">


        <EditText
            android:id="@+id/handleText"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="gandhi21299"
            android:fontFamily="@font/anaheim"
            android:hint="@string/handle"
            android:inputType="text"
            android:textColor="#051633" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#fbcb0e"
            android:fontFamily="@font/anaheim"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="#051633"
            android:textSize="20dp"
            tools:layout_conversion_absoluteHeight="100dp"
            tools:layout_conversion_absoluteWidth="100dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="241dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="198dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:indeterminateTint="@color/colorPrimaryDark"/>

</androidx.constraintlayout.widget.ConstraintLayout>