<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeActivity"
    android:background="@color/LightBlue"
    android:paddingHorizontal="20dp">

    <ProgressBar
        android:id="@+id/loadingProblems"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminateTint="@color/font_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        android:visibility="invisible"
        style="@style/Platform.MaterialComponents.Light"/>

    <Button
        android:id="@+id/beginBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        android:text="@string/start_coding"
        android:background="@drawable/handle_view"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="beginCoding"/>


    <LinearLayout
        android:id="@+id/problem_layout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            >

            <Chronometer
                android:id="@+id/timer_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/skip_btn"
                android:fontFamily="@font/anaheim"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/end_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="13dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/end_btn"
                android:fontFamily="@font/anaheim"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="@string/end"
                android:textColor="@color/font_color"
                android:textSize="24sp"
                android:onClick="endGame"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/problem_name"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/problem_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anaheim"
                android:text="@string/problem_name"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/handle_view"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/problem_content"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:fontFamily="@font/anaheim"
                android:text="@string/problem_content"
                android:textColor="@color/font_color"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="40dp"
            android:gravity="center">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/submit_btn"
                android:onClick="submitSoln"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>